package controller;

import model.Partie;
import view.StartWindow;

public class GameController {
    public GameController()
    {
    }
}
