package model;

public interface CreateIndiceStrategy {
    public Indice[] afficherIndice(Indice[] indices);
}
