package model;

public class CreationFacile implements IndiceStrategy{
    @Override
    public Indice[] afficherIndice(Indice[] indices) {
        return new Indice[0];
    }
}
