package model;

public enum Indice {
    BONNE_PLACE,
    MAUVAISE_PLACE,
    INCORRECT;
}