package view;

import model.Couleur;
import model.Indice;
import model.Observeur;

public class ObserverConcret implements Observeur {
    @Override
    public void updateIndice(Indice indice) {

    }
}
